--- a/style.css
+++ b/style.css
@@ -3,29 +3,45 @@
      padding:0;
      box-sizing: border-box;
 }
-html, body{
-     /* background-image: linear-gradient(to right, #253898, #5737D6);
-     background-image: linear-gradient(to right, #00BC40, #4C3AE3);
-     background-image: linear-gradient(to right, #FF4331, #D31A50);
-     background-image: linear-gradient(to right, #FF9F4A, #FF3C83); */
-     background-color: #fff;
+:root{
+     --primary-color:#fff;
+     --secondary-color:rgb(24, 24, 24);
+     
+     --primary-color:rgb(24, 24, 24);
+     --secondary-color:#fff;
 }
+
+html, body{
+     background-color: var(--primary-color);
+}
+
+.themes{
+     border: 2px solid var(--secondary-color);
+     width: max-content;
+     text-align: right;
+     margin: 20px;
+     padding: 5px;
+     border-radius: 15px;
+     border: 2px solid var(--secondary-color);
+}
+
 .container{
-     margin-top: 100px;
+     margin-top: 50px;
      text-align: center;
      padding: 20px;
 }
 #heading{
      font-size: 40px;
+     color: var(--secondary-color);
 }
 #heading::after{
      content: "";
      position: absolute;
-     top:27%;
+     top:33%;
      left: 50%;
      width: 160px;
      height: 3px;
-     background-color: #000;
+     background-color: var(--secondary-color);
      transform: translate(-50%);
 }
 #listId{
@@ -35,25 +51,27 @@ html, body{
      width: 250px;
      outline: none;
      font-size: 16px;
+     color: #000;
 }
 #addItem{
      /* padding:15px; */
      height: 50px;
      width: 50px;
      border-radius: 50%;
-     background-color:#000;
-     color: #fff;
+     border: 2px solid var(--secondary-color);
+     color: var(--primary-color);
+     background-color:var(--secondary-color);
      font-size: 20px;
 }
 #addItem:hover{
-     color: #000;
-     background-color: #fff;
+     color: var(--secondary-color);
+     background-color: var(--primary-color);
 }
-
 .listItems{
      margin: auto;
 }
 .listCount, ol{
+     color: var(--secondary-color);
      margin-left: 15% ;
 }
 ol {
