--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
      --primary-color:#fff;
      --secondary-color:rgb(24, 24, 24);
      
+}
+.darkTheme{
      --primary-color:rgb(24, 24, 24);
      --secondary-color:#fff;
 }
@@ -14,21 +16,27 @@
 html, body{
      background-color: var(--primary-color);
 }
-
-.themes{
-     border: 2px solid var(--secondary-color);
+.box{
+     height: 100vh;
+}
+#themes{
      width: max-content;
      text-align: right;
-     margin: 20px;
+     position: fixed;
+     margin-left: 30px;
+     margin-top: 30px;
      padding: 5px;
      border-radius: 15px;
      border: 2px solid var(--secondary-color);
 }
+#sun{
+     display: none;
+}
 
 .container{
-     margin-top: 50px;
      text-align: center;
      padding: 20px;
+     padding-top: 120px;
 }
 #heading{
      font-size: 40px;
@@ -37,7 +45,7 @@ html, body{
 #heading::after{
      content: "";
      position: absolute;
-     top:33%;
+     top:28%;
      left: 50%;
      width: 160px;
      height: 3px;
@@ -54,7 +62,6 @@ html, body{
      color: #000;
 }
 #addItem{
-     /* padding:15px; */
      height: 50px;
      width: 50px;
      border-radius: 50%;
