minor changes updated

--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
-*{
+* {
      margin: 0;
-     padding:0;
+     padding: 0;
      box-sizing: border-box;
 }
-:root{
-     --primary-color:#fff;
-     --secondary-color:rgb(24, 24, 24);
-     
-}
-.darkTheme{
-     --primary-color:rgb(24, 24, 24);
-     --secondary-color:#fff;
+
+:root {
+     --primary-color: #fff;
+     --secondary-color: rgb(24, 24, 24);
+
 }
 
-html, body{
+.darkTheme {
+     --primary-color: rgb(24, 24, 24);
+     --secondary-color: #fff;
+}
+
+html,
+body {
      background-color: var(--primary-color);
      height: 100vh;
 }
 
 
-#themes{
+#themes {
      width: max-content;
      text-align: right;
      position: fixed;
@@ -30,30 +33,34 @@ html, body{
      border: 2px solid var(--secondary-color);
      cursor: pointer;
 }
-#sun{
+
+#sun {
      display: none;
 }
 
-.container{
+.container {
      text-align: center;
      padding: 20px;
      padding-top: 120px;
 }
-#heading{
+
+#heading {
      font-size: 40px;
      color: var(--secondary-color);
 }
-#heading::after{
+
+#heading::after {
      content: "";
      position: absolute;
-     top:28%;
+     top: 28%;
      left: 50%;
      width: 160px;
      height: 3px;
      background-color: var(--secondary-color);
      transform: translate(-50%);
 }
-#listId{
+
+#listId {
      margin-top: 30px;
      padding: 10px 8px;
      border-radius: 7px;
@@ -62,51 +69,81 @@ html, body{
      font-size: 16px;
      color: #000;
 }
-#addItem{
+
+#addItem {
      height: 50px;
      width: 50px;
      border-radius: 50%;
      border: 2px solid var(--secondary-color);
      color: var(--primary-color);
-     background-color:var(--secondary-color);
+     background-color: var(--secondary-color);
      font-size: 20px;
      cursor: pointer;
 }
-#addItem:hover{
+
+#addItem:hover {
      color: var(--secondary-color);
      background-color: var(--primary-color);
 }
-.listItems{
+
+.listItems {
      margin: auto;
      width: 70%;
      height: 330px;
      overflow: auto;
 }
-.listCount, ol{
+
+.listCount,
+ol {
      color: var(--secondary-color);
-     margin-left: 15% ;
+     margin-left: 15%;
 }
+
 ol {
      font-size: 20px;
-     margin:30px 0px 0px 20%; 
+     margin: 30px 0px 0px 20%;
 }
-ol li{
+
+ol li {
      padding: 10px;
      width: 80%;
      border: 2px solid var(--secondary-color);
 }
-   
+
 li:nth-child(odd) {
      background: rgb(159, 159, 159);
 }
-#deleteItem{
+
+#deleteItem {
      padding: 3px;
      background-color: #d9534f;
      cursor: pointer;
      border: 2px solid var(--secondary-color);
 }
-#deleteItem:hover{
+
+#deleteItem:hover {
      background-color: var(--primary-color);
      border-color: #d9534f;
-     color:#d9534f;
+     color: #d9534f;
+}
+
+@media screen and (max-width:768px) {
+     ol {
+          font-size: 20px;
+          margin: 30px 0px 0px 8%;
+     }
+
+     .listCount,
+     ol {
+          color: var(--secondary-color);
+          margin-left: 10%;
+     }
+
+     ol li {
+          padding: 10px;
+          width: 90%;
+          border: 2px solid var(--secondary-color);
+     }
+
+
 }
